--- a/index.html
+++ b/index.html
@@ -1,5 +1,10 @@
 <html>
-  <body>
+ <head>
+   <title>
+      Awesome Start page
+   </title> 
+</head>
+ <body>
     Hello there, awesome person! 
   </body>
 </html>
