--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <html>
  <head>
-   <title>
-      Awesome Start page
-   </title> 
-</head>
+   <title>Awesome Start page</title>
+    </head>
+ 
  <body>
+   <h1> Heading </h1>
     Hello there, awesome person! 
   </body>
 </html>
