Upadated index.html
Added image tag to index.html

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
  
  <body>
    <h1> Heading </h1>
+   <img src="https://avatars.githubusercontent.com/u/97972385?v=4">
     Hello there, awesome person! 
   </body>
 </html>
