--- a/index.html
+++ b/index.html
@@ -7,5 +7,16 @@
    <h1> Heading </h1>
    <img src="https://avatars.githubusercontent.com/u/97972385?v=4">
     Hello there, awesome person! 
+   <ol>
+    <li>This</li>
+        <li>Is an</li>
+            <li>Ordered list</li>
+           
+  </ol>
+   <ul>
+        <li>This</li>
+            <li>Is an</li>
+                <li>Unordered list</li>
+  </ul>
   </body>
 </html>
