Upadated index.html
Added link in the list

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
    <img src="https://avatars.githubusercontent.com/u/97972385?v=4">
     Hello there, awesome person! 
    <ol>
-    <li>This</li>
-        <li>Is an</li>
-            <li>Ordered list</li>
+    <li>This is the favorite site </li>
+          <li><a href="https://github.com">This is a link to GitHub!</a></li>
+
            
   </ol>
    <ul>
