--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <html>
  <head>
    <title>Awesome Start page</title>
+        <link rel="stylesheet" href="style.css">
+    
     </head>
- 
  <body>
    <h1> Heading </h1>
    <img src="https://avatars.githubusercontent.com/u/97972385?v=4">
